--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "video-converter"
-version = "0.2.1"
-description = "Media converter: NVENC+AAC"
+version = "0.2.3"
+description = "Video converter: NVENC+AAC"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
